feat: add batch token group editing
